--- a/.github/workflows/combine_markdowns.yml
+++ b/.github/workflows/combine_markdowns.yml
@@ -15,26 +15,48 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: 🧰 Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.x"
 
-      - name: Run combine_markdowns script
+      - name: 📦 Show environment details
         run: |
-          python .github/scripts/combine_markdowns.py
+          echo "Python version:"
+          python --version
+          echo "Working directory:"
+          pwd
+          echo "Files in repo root:"
+          ls -al
 
-      - name: Commit and push changes
+      - name: 🧩 Run combine_markdowns script with logging
         run: |
-          if git diff --quiet README.md; then
-            echo "No changes to README.md"
-          else
-            git config user.name "github-actions[bot]"
-            git config user.email "github-actions[bot]@users.noreply.github.com"
-            git add README.md
-            git commit -m "Auto-update combined README.md"
-            git push
-          fi
+          echo "===== Running combine_markdowns.py ====="
+          python .github/scripts/combine_markdowns.py
+          echo "===== Script finished. Log file contents: ====="
+          cat combine_markdowns.log || echo "No log file found."
+          echo "===== README.md preview (first 30 lines): ====="
+          head -n 30 README.md || echo "README.md not found!"
+
+      - name: 📝 Commit and push README.md (always attempt)
+        run: |
+          echo "===== Checking for changes ====="
+          git status
+          git diff --stat README.md || echo "No diff available."
+
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+
+          git add README.md combine_markdowns.log || echo "Nothing to add"
+          git commit -m "Auto-update combined README.md [skip ci]" || echo "No changes to commit"
+          git push || echo "Nothing to push"
+
+      - name: ✅ Workflow summary
+        run: |
+          echo "===== Final repository state ====="
+          git status
+          echo "===== Recent commits ====="
+          git log -n 3 --oneline
